--- a/README.rdoc
+++ b/README.rdoc
@@ -1,17 +1,14 @@
-= gunit
+= GUnit
 
 Unit Test. Gangsta style.
 
-== Note on Patches/Pull Requests
- 
-* Fork the project.
-* Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
-* Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but
-   bump version in a commit by itself I can ignore when I pull)
-* Send me a pull request. Bonus points for topic branches.
+== A fresh new XUnit Test implementation, poppin' a cap in the ass of TestUnit.
+
+== Rolling with the following features:
+* Nested contexts
+* Custom macros *soon*
+* Setup, teardown and *soon* exercise
+* Todos
 
 == Copyright
 
